--- a/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
+++ b/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
@@ -61,7 +61,7 @@
     "    - You can use uppercase letters\n",
     "    - Python are case sensitive\n",
     "- __Reserved Words:__\n",
-    "    <img src=\"Reserved Words.png\"/>\n",
+    "    <img src=\"./img/Reserved Words.png\"/>\n",
     "- __Assigning Value to Variables__\n",
     "    - Single assignment:\n",
     "        - ex: x = 5\n",
@@ -111,7 +111,15 @@
     "- __There are 3 types of operators__\n",
     "    - Arithmatic Operator\n",
     "    - Comparison Operator\n",
-    "    - Assignment Operator"
+    "    - Assignment Operator\n",
+    "- __Arithmatic Operator__<br />\n",
+    "<img src=\"./img/Aritmatic Operator.png\">\n",
+    "\n",
+    "- __Comparison Operator__<br />\n",
+    "<img src=\"./img/ComparisonOperators.png\">\n",
+    "\n",
+    "- __Assignment Operator__<br />\n",
+    "<img src=\"./img/AssignmentOperators.png\">"
    ]
   }
  ],
