--- a/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
+++ b/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
@@ -121,11 +121,147 @@
     "- __Assignment Operator__<br />\n",
     "<img src=\"./img/AssignmentOperators.png\">"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Loops\n",
+    "- __Loop Types:__\n",
+    "    - While Loop \n",
+    "        - Repeats a statement or group of statements while a given condition is true. It tests the condition before executing the loop body.\n",
+    "        - \n",
+    "    - Infinite Loop\n",
+    "        - \n",
+    "    - For Loop\n",
+    "        - The for loop iterates over the elements of a collection\n",
+    "    - Nested Loop\n",
+    "        - One loop inside other loop\n",
+    "- __For vs While:__\n",
+    "    - For loop\n",
+    "        - you should use the for loop when the number of iteration is known\n",
+    "        - The loop iterates over the elements of a collection\n",
+    "        - The loop iterates over a range of values which is known in advance at execution\n",
+    "    - While loop\n",
+    "        - The while statement simply loops until a condition is False\n",
+    "        - The while loop is the more general one because its loop condition is more flexible and can be more complicated than that of a for\n",
+    "        - The while loop can take every boolean expression as condition\n",
+    "- __Control Statements:__\n",
+    "    - Break\n",
+    "        - The break statement in Python terminates the current loop and resumes execution at the next statement\n",
+    "        - The most common use for break is when some external condition is triggered requiring a hasty exit from a loop\n",
+    "        - The break statement can be used in both while and for loops\n",
+    "    - Continue\n",
+    "        - The continue statement in Python returns the control to the beginning of the while loop\n",
+    "        - The continue statement rejects all the remaining statement in the current iteration of the loop and moves the control back the the top of the loop\n",
+    "    - Pass\n",
+    "        - The pass statement in Python is used when a statement is required syntactically but you do not want any command or code to execute\n",
+    "        - The pass statement is a null operation; nothing happens when it executes\n",
+    "        - The pass is also useful in places where your code will eventually go, but has not been written yet.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Condition\n",
+    "- __Condition in Python__<br />\n",
+    "    A Decision is when a program has more than one choice of actions depending on a variable's value. Think of a traffic light. When it is green, we continue our drive. When we see the light turn yellow, we reduce our speed, and when it is red, we stop. These are logical decisions that depend on the value of the traffic light. Luckily, Python has a decision statement to help us when our application needs to make such decision for the user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Function\n",
+    "- __What is Function:__\n",
+    "    - A function is a block of organized, reusable code that is used to perform a single, related action.\n",
+    "    - Function provide better modularity for your application and a high degree of code reusing\n",
+    "    - Pyhton gives you many built-in functions like print()\n",
+    "    - You can also create your own functions. These functions are called user-definded functions\n",
+    "- __How to Define a Function?__\n",
+    "    - Function blocks begin with the keyword __def__ followed by the function name and parentheses()\n",
+    "    - Any input parameters or arguments should be placed within these parentheses. You can also define parameters inside these parentheses\n",
+    "    - The first statement of a function can be an optional statement - the documentation string of the function or docstring.\n",
+    "    - The code block within every function start with a colod(:) and is indented.\n",
+    "    - The statement return [expression] exits a fuction, optionally passing bck an expression to the caller. A return statement with no arguments is the same as return None.\n",
+    "- __Calling a Function__\n",
+    "    - Defining a function only gives it a name, specifies the parameters that are to be included in the function and structures the blocks of code.\n",
+    "    - Once the basic structure of a function is finalized, you can execute it by calling it from another function or directly from the python prompt. Following is the example to call printme() function.\n",
+    "- __Python Function Arguments__\n",
+    "    - you can call a function by using the following types of formal arguments:\n",
+    "        - __Required arguments:__ are the arguments passed to a function in correct positional order. Here, the number of arguments int the function call should match exactly with the function definition here\n",
+    "        - __Keyword arguments__\n",
+    "            - Keyword arguments are related to the function calls. When you use keyword arguments a function call, the caller identifies the arguments by the parameter name.\n",
+    "            - This allows you to skip arguments or place them out of order because the python interpreter is able to use the keywords provided to match the values with parameters. you can also make keyword calls to the printme() fucntion.\n",
+    "        - __Default arguments__\n",
+    "            - A default argument is an argument that assumes a default value if a value is not provided in the function call for that argument.\n",
+    "        - __Variable-length argument__\n",
+    "            - You may need to preocess a function for more arguments than you specified while defining the function. These arguments are called variable-lengtharguments and are not named in the function definition, unlike required and default arguments.\n",
+    "- __What is Anonymous Function__\n",
+    "    - These function are called anonymous because they are not declared in the standard manner by using the def keyword. You can use the lambda keyword to create small anonymous function.\n",
+    "    - Lambda forms can take any number of arguments but return just one value in the form of a expression. They cannot contain commands or multiple expressions.\n",
+    "    - An anonymous function cannot be a direct call to print because lambda requires an expression\n",
+    "    - Lambda functions have their own local namespace and cannot access variables other than those in their parameter list and those in the global namespace\n",
+    "- __Return Statement__\n",
+    "    - The statement return [expression] exits a function, optionally passing back an expression to the caller. A return statement with no arguments is the same as return None\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Strings\n",
+    "- __String ..?__\n",
+    "    - Strings are amongst the most popular types in Python. We can crete them simply by enclosing characters in quotes. Python treats single quotes the same as double quotes\n",
+    "    - Creating strings is s simple as assigning a value to a variable\n",
+    "- __Accessing Values in Strings:__\n",
+    "    - Python does not support a character type; these are treated as strings of length one, thus also considered a substring.\n",
+    "    - To access substrings, use the square brackets for slicing along with the index or indices to obtain your substring.\n",
+    "- __String Formatting Operator:__\n",
+    "    - One of Python's coolest features is the string format operator %\n",
+    "- __Raw String:__\n",
+    "    - Raw strings don't treat the backslash as a special character t all. Every character you put into a raw string stays the way you wrote it.\n",
+    "- __Python String Methods:__\n",
+    "    - Capitalize() -> Caapitalizes first letter of string\n",
+    "    - Lower() -> Converts all uppercase letters in string to lowercase\n",
+    "    - Upper() -> Converts lowercase letters in string to uppercase\n",
+    "    - isspace() -> Returns true if string contains only whitespace characters and false otherwise\n",
+    "    - islower() -> Returns true is string has at least 1 cased charcter and ll cased characters re i lowercase nd false otherwise\n",
+    "    - Isupper() -> Return true if string has at least one cased character and all cased character are in uppercase and false otherwise\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python List\n",
+    "- __List ..?__\n",
+    "    - The most basic data structure in python is the sequence. Each element of a sequence is assigned a number - its position or index. The first index is zero, the second index one, and so forth"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "8e0d0260e1f3d0b9823b804dc5934a8bd3512d2d0af3147365a0766f6dd8bfcd"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('base')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
