--- a/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
+++ b/Udemy-PythonProgramming/Udemy - Python Programming (Basics,OOP,Modules,PyQt).ipynb
@@ -238,8 +238,689 @@
    "source": [
     "#### Python List\n",
     "- __List ..?__\n",
-    "    - The most basic data structure in python is the sequence. Each element of a sequence is assigned a number - its position or index. The first index is zero, the second index one, and so forth"
+    "    - The most basic data structure in python is the sequence. Each element of a sequence is assigned a number - its position or index. The first index is zero, the second index one, and so forth\n",
+    "    - Creating a list is as simple as putting different comma-separated values between squere brackets.\n",
+    "- __Acessing Values in Lists:__\n",
+    "    - To access values in lists, use the square brackets for slicing along with the index or indices to obtain value available at that index"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list1[0]:  physic\n",
+      "list1[3]:  2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000]\n",
+    "print(\"list1[0]: \", list1[0])\n",
+    "print(\"list1[3]: \", list1[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Updating Lists:__\n",
+    "    - You can update single or multiple elements of ists by giving the slice on the left-hand side of the assignment operator, and you can add to elements in a list with the append() method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2001\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000]\n",
+    "list1[2] = 2001;\n",
+    "print(list1[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Delete List Elements:__\n",
+    "    - To remove a list element, you can use either the del statement if you know exactly ehich element(s) you are deleting or the remove() method if you do not know."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['physic', 'chemistry', 1997, 2000]\n",
+      "['physic', 'chemistry', 2000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000]\n",
+    "print(list1)\n",
+    "del list1[2]\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Len()__\n",
+    "    - Gives the total lengt of the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000]\n",
+    "print(len(list1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Index()__\n",
+    "    - Method to returns the position at the first occurence of the specified value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000]\n",
+    "print(list1.index('physic'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Insert()__\n",
+    "    - Method inserts the specified value at the specified position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['physic', 'math', 'chemistry', 1997, 2000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000]\n",
+    "list1.insert(1,'math')\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Apend()__\n",
+    "    - method appends an element to the end of the list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['physic', 'chemistry', 1997, 2000, 'data structures']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000]\n",
+    "list1.append('data structures')\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Count()__\n",
+    "    - Method returns the number of elements with the specified value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total chemistry:  2\n",
+      "total physic:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000,'chemistry']\n",
+    "print(\"total chemistry: \",list1.count('chemistry'))\n",
+    "print(\"total physic: \",list1.count('physic'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Pop()__\n",
+    "    - Method removes the item at the given index rom the list and returns the removed item."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chemistry\n",
+      "['physic', 'chemistry', 1997, 2000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000,'chemistry']\n",
+    "print(list1.pop())\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Reverse()__\n",
+    "    - Method reverses the sorting order of the elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['chemistry', 2000, 1997, 'chemistry', 'physic']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000,'chemistry']\n",
+    "list1.reverse()\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Remove()__\n",
+    "    - method takes a single element as an argument and removes it from the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['physic', 'chemistry', 2000, 'chemistry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = ['physic','chemistry',1997,2000,'chemistry']\n",
+    "list1.remove(1997)\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Tuple\n",
+    "- __Tuple ..?__\n",
+    "    - A tuple is a sequence of immutable Python objects. Tuple are sequences, just like lists.\n",
+    "    - The only difference is that tuples can't be changed. i.e. Tuples are immutable and tuples use parentheses and lists use square brackets.\n",
+    "    - Creating a tuple is as simple as putting different comma-seperated values and optionally you can put these comma-separated values between parenteses alse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tup1 = ('physic','chemistry',1997,2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Accessing Values in Tuples:__\n",
+    "    - To access values in tuple, use the square bracket for slicing along with the inces or indices to obtain value available at that index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup1[0]:  physic\n",
+      "tup1[3]:  2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup1 = ('physic','chemistry',1997,2000)\n",
+    "print(\"tup1[0]: \", tup1[0])\n",
+    "print(\"tup1[3]: \", tup1[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Updating Tuples:__\n",
+    "    - Tuples are immutable which means you cannot update them or change values of tuple elements. But we able to take portions of an existing tuples to create a new tuples as follow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12, 34.56, 'abc', 'xyz')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup1 = (12,34.56) ; tup2 = ('abc','xyz')\n",
+    "tup3 = tup1 + tup2\n",
+    "tup3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Delete Tuple Elements:__\n",
+    "    - Removing individual tuple elements is not possible. There is, of course, nothing wrong with putting together another tuple with the undesired elements discarded.\n",
+    "    - To explicitly remove an entire tuple, just use the del statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('physic', 'chemistry', 1997, 2000)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tup1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_14436/3154347681.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mtup1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tup1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tup1 = ('physic','chemistry',1997,2000)\n",
+    "print(tup1)\n",
+    "del tup1\n",
+    "print(tup1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome\n",
+      "abc\n",
+      "('tes', 'abc', 'dec')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Indexing, Slicing, and Matixes:\n",
+    "L = ('spam','Python','Welcome','tes','abc','dec')\n",
+    "print(L[2])\n",
+    "print(L[-2])\n",
+    "print(L[3:])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Python Tuple Build in Methods__\n",
+    "    - Len()\n",
+    "    - Max() - Min()\n",
+    "    - List() - Tuple()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n",
+      "9\n",
+      "('spam', 'Python', 'Welcome')\n",
+      "(12, 24, 90, 34, 56, 9)\n",
+      "['spam', 'Python', 'Welcome']\n",
+      "['spam', 'Python', 'Welcome']\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = ('spam','Python','Welcome')\n",
+    "print(len(L))\n",
+    "\n",
+    "Val = (12,24,90,34,56,9)\n",
+    "print(max(Val))\n",
+    "print(min(Val))\n",
+    "\n",
+    "print(L)\n",
+    "print(Val)\n",
+    "print(list(L))\n",
+    "\n",
+    "d = list(L)\n",
+    "print(d)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pyhton Dictionary\n",
+    "- __Dictionary:__\n",
+    "    - A dictionary is mutable and is nother container type that can store any number of Python objects, icluding other container types.\n",
+    "    - Dictionries consist of pairs (called items) of keys and their corresponding values.\n",
+    "    - Python dictionries are also known as associative arrays or hash tables.\n",
+    "    - Each key is separated from its value by a colon (:), the items are separated by commas, and the whole thing is enclosed in curly braces. An empty dictionary without any items is written with just two curly braces, like this: {}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2341'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict = {'alice':'2341','beth':'9123','cecil':'3251'}\n",
+    "dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Accessing Values in Dictionary:__\n",
+    "    - To access dictionary elements, you can use the familiar square brackets along with the key to obtain its value. Following is a simple example:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict[Name]:  zara\n",
+      "dict[Age]:  7\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dict = {'Name':'zara','Age':7,'Class':'First'}\n",
+    "print(\"dict[Name]: \",Dict['Name'])\n",
+    "print(\"dict[Age]: \",Dict['Age'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Updating Dictionary:__\n",
+    "    - You can update a dictionary by adding a new entry or item (i.e., a key-value pair), modifying and existing entry, or deleting an existing entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Name': 'zara', 'Age': 8, 'Class': 'First', 'School': 'DPS School'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = {'Name':'zara','Age':7,'Class':'First'}\n",
+    "x['Age'] = 8\n",
+    "x['School'] = \"DPS School\"\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Delete Dictionary Elements:__\n",
+    "    - You can either remove individual dictionary elements or clear the entire contents of a dictionary. You can also delete entire dictionary in a single operation.\n",
+    "    - To explicitly remove an entire dictionary, just use the del statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Age': 8, 'Class': 'First', 'School': 'DPS School'}\n",
+      "remove all entries {}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_14436/1986749485.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"remove all entries\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0md\u001b[0m \u001b[0;31m# delete entire dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"deleted dictionary\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'Name': 'zara', 'Age': 8, 'Class': 'First', 'School': 'DPS School'}\n",
+    "del d['Name'] # remove entry with key 'Name'\n",
+    "print(d)\n",
+    "d.clear() # remove all entries in dict\n",
+    "print(\"remove all entries\",d)\n",
+    "del d # delete entire dictionary\n",
+    "print(\"deleted dictionary\",d)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- __Properties of Dictionary Keys:__\n",
+    "    - Dictionery values have no restrictions. The Can be any arbitrary Phyton Object, either standard objects or user-defined objects. However, same is not true for the keys.\n",
+    "    - More than one entry per key not allowed. Which means no duplicate key is allowed. When duplicate keys encountered during assignment, the last assignment wins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dic['Name']: Manni\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {'Name': 'zara', 'Age': 8, 'Class': 'First', 'Name': 'Manni'}\n",
+    "print(\"dic['Name']:\", dic['Name'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Keys must be immutable. Which means you can use stringsm numbers or tuples as dictionary keys but someting like ['key'] is not allowed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_14436/3700473576.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'zara'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Age'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Class'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'First'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Name'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Manni'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {['Name']: 'zara', 'Age': 8, 'Class': 'First', 'Name': 'Manni'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
